--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = '<img width=300px src="./scr/mario.jpg" alt="Immagine di fine countdown">';
   }
 }, 1000);
 </script>
