--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
         <h2>PRIMA O POI...</h2>
     </div>
 
-<p id="demo"></p>
+<p id="cd"></p>
 
 <script>
 // Set the date we're counting down to
@@ -43,13 +43,13 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
   // Output the result in an element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  document.getElementById("cd").innerHTML = days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
     
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = '<img width=300px src="./scr/mario.jpg" alt="Immagine di fine countdown">';
+    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/mario.jpg" alt="Immagine di fine countdown">';
   }
 }, 1000);
 </script>
