--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ p {
 </head>
 <body>
     <div id="title">
-        <h1>CI VEDIAMO DA MARIO!</h1>
-        <h2>PRIMA O POI...</h2>
+        <h1>Coffee Break ☕️</h1>
+        <h2>Tra...</h2>
     </div>
 
 <p id="cd"></p>
 
 <script>
-var countDownDate = new Date("Nov 29, 2024 19:45:00").getTime();
+var countDownDate = new Date("Jan 27, 2025 11:00:00").getTime();
 var x = setInterval(function() {
   var now = new Date().getTime();
   var distance = countDownDate - now;
@@ -38,7 +38,7 @@ var x = setInterval(function() {
     
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/mario.jpg" alt="Immagine di fine countdown">';
+    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/coffee.jpeg">';
   }
 }, 1000);
 </script>
