--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var x = setInterval(function() {
     
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/coffee.jpeg">';
+    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/coffeebreak.jpg">';
   }
 }, 1000);
 </script>
