--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="it">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Countdown</title>
-<style>
-
-#title {
-    text-align: center;
-}
-p {
-  text-align: center;
-  font-size: 50px;
-  margin-top: 0px;
-}
-</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Countdown</title>
+    <style>
+        #title {
+            text-align: center;
+        }
+        p {
+            text-align: center;
+            font-size: 50px;
+            margin-top: 0px;
+        }
+    </style>
 </head>
 <body>
     <div id="title">
@@ -21,44 +20,39 @@ p {
         <h2>Tra...</h2>
     </div>
 
-<p id="cd"></p>
+    <p id="cd"></p>
 
-<script>
+    <script>
+        function getNextCountdown() {
+            const now = new Date();
+            const target = new Date();
+            target.setHours(11, 0, 0, 0);
+            if (now > target) {
+                target.setDate(target.getDate() + 1);
+            }
+            return target.getTime();
+        }
 
-  function getNextCountdown() {
-    const now = new Date();
-    const target = new Date();
-    target.setHours(11, 0, 0, 0);
-    if (now > target) {
-        target.setDate(target.getDate() + 1);
-    }
-    return target.getTime();
-}
+        let countDownDate = getNextCountdown();
 
-let countDownDate = getNextCountdown();
+        setInterval(function() {
+            const now = new Date().getTime();
+            const distance = countDownDate - now;
+            const imageEndTime = countDownDate + 20 * 60 * 1000; // Mostra l'immagine per 20 min
 
-const x = setInterval(function() {
-  const now = new Date().getTime();
-  const distance = countDownDate - now;
-  const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  if (distance >= 0) {
-    document.getElementById("cd").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-  }
-    
-  if (distance < 0 && now <= countDownDate + 15 * 60 * 1000) {
-    document.getElementById("cd").innerHTML = '<img width=300px src="./scr/scr/coffeebreak.jpg">';
-  }
-
-  if (now > countDownDate + 20 * 60 * 1000) {
-    countDownDate = getNextCountdown();
-  }
-}, 1000);
-</script>
-
+            if (distance > 0) {
+                const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+                document.getElementById("cd").innerHTML = days + "d " + hours + "h "
+                    + minutes + "m " + seconds + "s ";
+            } else if (now <= imageEndTime) {
+                document.getElementById("cd").innerHTML = '<img width=300px src="./scr/coffeebreak.jpg">';
+            } else {
+                countDownDate = getNextCountdown(); // Reset per il giorno successivo
+            }
+        }, 1000);
+    </script>
 </body>
 </html>
