--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 document.getElementById("cd").innerHTML = days + "d " + hours + "h "
                     + minutes + "m " + seconds + "s ";
             } else if (now <= imageEndTime) {
-                document.getElementById("cd").innerHTML = '<img width=300px src="./src/coffeebreak.jpg">';
+                document.getElementById("cd").innerHTML = '<img width=300px src="./scr/coffeebreak.jpg">';
                 document.getElementById("title").style.display = "none";
             } else {
                 countDownDate = getNextCountdown(); 
